# osmdbt

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  iwyu.imp  osmdbt-config.yaml  osmdbt_config.yaml
.github/actions/build-and-test/: action.yml
.github/actions/cmake/: action.yml
.github/actions/ctest/: action.yml
.github/actions/install/: action.yml
.github/actions/install-pg/: action.yml
.github/workflows/: ci.yml  clang-tidy.yml  release.yml
debian/: .gitignore  changelog  control  copyright  rules
man/: CMakeLists.txt  common-options.md  manpage.template  osmdbt-catchup.md  osmdbt-create-diff.md  osmdbt-disable-replication.md  osmdbt-enable-replication.md  osmdbt-fake-log.md  osmdbt-get-log.md  osmdbt-peek.md  osmdbt-state.txt.md  osmdbt-testdb.md  osmdbt.md
postgresql-plugin/: CMakeLists.txt  README.md  osm-logical.c  test.rb
src/: CMakeLists.txt  config.cpp  config.hpp  db.cpp  db.hpp  exception.hpp  io.cpp  io.hpp  lsn.cpp  lsn.hpp  options.cpp  options.hpp  osmdbt-catchup.cpp  osmdbt-create-diff.cpp  osmdbt-disable-replication.cpp  osmdbt-enable-replication.cpp  osmdbt-fake-log.cpp  osmdbt-get-log.cpp  osmdbt-peek.cpp  osmdbt-testdb.cpp  osmobj.cpp  osmobj.hpp  state.cpp  state.hpp  util.cpp  util.hpp  version.cpp.in  version.hpp
test/: CMakeLists.txt  structure.sql
test/data/: 359.state.txt  minimal.state.txt  sane-time.state.txt
test/db/: check-diff.sh  check-log.sh  create-objects.sh  init.sh
test/scripts/: 01-get-log-max-changes.sh  01-get-log.sh  02-create-diff.sh  03-fake-log.sh  04-log-pid-fail.sh  05-create-diff-state.sh  06-create-diff-missing-state.sh  07-cmdline.sh  08-redaction.sh  meta.sql  moredata.sql  osmdbt-cmdline.sh  osmdbt-create-diff-compare.osc  osmdbt-create-diff-compare.sh  osmdbt-create-diff-compare.sql  osmdbt-create-diff-max-changes.sh  osmdbt-create-diff-missing-state.sh  osmdbt-create-diff-state-with-comment.sh  osmdbt-create-diff-state.sh  osmdbt-create-diff.sh  osmdbt-fake-log-multi.sh  osmdbt-fake-log.sh  osmdbt-get-log-max-changes.sh  osmdbt-get-log.sh  osmdbt-log-pid-fail.sh  osmdbt-redaction.sh  setup.sh  test-config.yaml.tmpl  testdata-2.sql  testdata-more.sql  testdata-multi.sql  testdata.sql
test/t/: test-config.cpp  test-lsn.cpp  test-osmobj.cpp  test-state.cpp  test-util.cpp  test_config.cpp  test_config_invalid_db.yaml  test_util.cpp
